--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@types/uuid": "^7.0.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "koa": "^2.11.0",
@@ -26,7 +27,8 @@
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^2.3.0",
-    "tslib": "^1.11.1"
+    "tslib": "^1.11.1",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "9.1.0",
