: add : add userlist, add fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "paths": {
       "$types/*": ["types/*"],
       "$components/*": ["src/components/*"],
-      "$helpers/*": ["src/helpers/*"],
+      "$utils/*": ["src/utils/*"],
       "$middleware/*": ["src/middleware/*"]
     }
   }
