--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
+    "@typegoose/typegoose": "^7.0.0",
     "@types/uuid": "^7.0.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -24,6 +25,7 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^8.0.8",
     "lodash": "^4.17.15",
+    "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^2.3.0",
@@ -37,6 +39,7 @@
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.0",
     "@types/lodash": "^4.14.149",
+    "@types/mongoose": "^5.7.13",
     "@types/node": "^13.9.2",
     "@types/socket.io": "^2.1.4",
     "@typescript-eslint/eslint-plugin": "2.25.0",
