--- a/package.json
+++ b/package.json
@@ -14,47 +14,48 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@koa/cors": "^3.0.0",
-    "@typegoose/typegoose": "^7.0.0",
-    "@types/uuid": "^7.0.2",
+    "@koa/cors": "^3.1.0",
+    "@typegoose/typegoose": "^7.3.2",
+    "@types/uuid": "^8.3.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "koa": "^2.11.0",
+    "koa": "^2.13.0",
     "koa-bodyparser": "^4.2.1",
     "koa-bodyparser-graphql": "^1.0.0",
     "koa-logger": "^3.2.1",
-    "koa-router": "^8.0.8",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.10",
+    "koa-router": "^9.4.0",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^2.3.0",
-    "tslib": "^1.11.1",
-    "uuid": "^7.0.3"
+    "tslib": "^2.0.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "@neutrinojs/airbnb": "9.1.0",
-    "@neutrinojs/node": "9.1.0",
+    "@neutrinojs/airbnb": "9.3.0",
+    "@neutrinojs/node": "9.3.0",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
-    "@types/koa-router": "^7.4.0",
-    "@types/lodash": "^4.14.149",
-    "@types/mongoose": "^5.7.13",
-    "@types/node": "^13.9.2",
-    "@types/socket.io": "^2.1.4",
-    "@typescript-eslint/eslint-plugin": "2.25.0",
-    "@typescript-eslint/parser": "2.25.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-typescript": "7.2.0",
-    "eslint-import-resolver-typescript": "2.0.0",
-    "eslint-plugin-import": "2.20.1",
+    "@types/koa-router": "^7.4.1",
+    "@types/lodash": "^4.14.159",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.0.27",
+    "@types/socket.io": "^2.1.11",
+    "@typescript-eslint/eslint-plugin": "3.9.0",
+    "@typescript-eslint/parser": "3.9.0",
+    "eslint": "7.7.0",
+    "eslint-config-airbnb-typescript": "9.0.0",
+    "eslint-import-resolver-typescript": "2.2.1",
+    "eslint-plugin-import": "2.22.0",
     "eslint-plugin-security": "1.4.0",
-    "neutrino": "9.1.0",
-    "terser-webpack-plugin": "2.3.5",
-    "ts-loader": "6.2.2",
-    "typescript": "3.8.3",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
-    "webpack-node-externals": "1.7.2"
+    "neutrino": "9.3.0",
+    "terser-webpack-plugin": "4.1.0",
+    "ts-loader": "8.0.2",
+    "typescript": "3.9.7",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12",
+    "webpack-node-externals": "2.5.1"
   }
 }
