--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
     "paths": {
       "$types/*": ["types/*"],
       "$components/*": ["src/components/*"],
