--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/lodash": "^4.14.159",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
     "@types/socket.io": "^2.1.11",
     "@typescript-eslint/eslint-plugin": "3.9.0",
     "@typescript-eslint/parser": "3.9.0",
