--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2017",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "build",
-    "sourceMap": true,
-    "inlineSources": true,
-    "sourceRoot": "/",
-    "baseUrl": ".",
-    "importHelpers": true,
-    "strict": true,
-    "noImplicitAny": false,
-    "noImplicitThis": false,
-    "alwaysStrict": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
+    "declaration": true,
+    "removeComments": true,
     "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
     "paths": {
-      "$types/*": ["types/*"],
-      "$components/*": ["src/components/*"],
-      "$utils/*": ["src/utils/*"],
-      "$middleware/*": ["src/middleware/*"]
+      "$common/*": ["src/common/*"]
     }
   }
 }
