--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,6 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "paths": {
-      "$common/*": ["src/common/*"]
-    }
+    "incremental": true
   }
 }
