--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^7.6.11",
     "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.5.1",
+    "@nestjs/core": "^7.6.11",
     "@nestjs/graphql": "^7.9.8",
-    "@nestjs/mongoose": "^7.2.3",
     "@nestjs/platform-express": "^7.5.1",
+    "@typegoose/typegoose": "^7.4.8",
     "apollo-server-express": "^2.19.2",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.2",
-    "mongoose": "^5.11.15",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "5.10.18",
+    "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -43,6 +45,8 @@
     "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "5.10.3",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
