--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typegoose/typegoose": "^7.4.8",
     "apollo-server-express": "^2.19.2",
     "graphql": "^15.5.0",
+    "graphql-subscriptions": "^1.2.0",
     "graphql-tools": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.10.18",
