--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@typegoose/typegoose": "^7.4.8",
     "apollo-server-express": "^2.19.2",
     "graphql": "^15.5.0",
+    "graphql-redis-subscriptions": "^2.3.1",
     "graphql-subscriptions": "^1.2.0",
     "graphql-tools": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.10.18",
+    "nestjs-redis": "^1.2.8",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
