--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql-subscriptions": "^1.2.0",
     "graphql-tools": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "5.10.18",
     "nestjs-redis": "^1.2.8",
     "nestjs-typegoose": "^7.1.38",
@@ -49,6 +50,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.168",
     "@types/mongoose": "5.10.3",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
