--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.11",
     "@nestjs/graphql": "^7.9.8",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-fastify": "^7.6.15",
     "@typegoose/typegoose": "^7.4.8",
     "apollo-server-express": "^2.19.2",
+    "apollo-server-fastify": "^2.22.2",
+    "fastify": "^3.14.1",
     "graphql": "^15.5.0",
     "graphql-redis-subscriptions": "^2.3.1",
     "graphql-subscriptions": "^1.2.0",
@@ -38,6 +40,8 @@
     "mongoose": "5.10.18",
     "nestjs-redis": "^1.2.8",
     "nestjs-typegoose": "^7.1.38",
+    "point-of-view": "^4.14.0",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
