--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/core": "^7.6.11",
     "@nestjs/graphql": "^7.9.8",
     "@nestjs/platform-fastify": "^7.6.15",
+    "@ntegral/nestjs-sentry": "^2.0.6",
+    "@sentry/node": "^6.2.5",
     "@typegoose/typegoose": "^7.4.8",
     "apollo-server-express": "^2.19.2",
     "apollo-server-fastify": "^2.22.2",
