--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,3 +38,4 @@ jobs:
           script: |
             cd ${{ secrets.BUILD_PATH }}
             sh ./bin/deployment.sh '${{ secrets.NODE_ENV }}' '${{ secrets.PORT }}' '${{ secrets.ORIGIN_URL }}' '${{ secrets.DB_NAME }}' '${{ secrets.DB_PASS }}' '${{ secrets.DB_USER }}' '${{ secrets.DB_URI }}' '${{ secrets.SECRET_ACCESS_KEY }}' '${{ secrets.SECRET_REFRESH_KEY }}' '${{ secrets.VK_CLIENT_ID }}' '${{ secrets.VK_CLIENT_SECRET }}' '${{ secrets.REDIS_URL }}' '${{ secrets.SSL }}' '${{ secrets.SENTRY_DSN }}'
+            rm -rf ./bin
