update nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -10,13 +10,14 @@ server {
 }
 
 server {
+    listen 80;
 
     server_name xn--72-9kcd8arods1i.xn--p1ai;
 
     index index.html;
 
     location / {
-        root /home/user/my-choice/frontend/build;
+        root /var/www/moi-vibor.rf/frontend/build;
 
         try_files $uri @prerender;
     }
@@ -26,13 +27,13 @@ server {
     }
 
     location /assets {
-        root /home/user/my-choice/backend/dist;
+        root /var/www/moi-vibor.rf/backend/dist;
 
         try_files $uri @static;
     }
 
     location /static {
-        root /home/user/my-choice/frontend/build;
+        root /var/www/moi-vibor.rf/frontend/build;
 
         try_files $request_uri @static;
     }
@@ -87,14 +88,6 @@ server {
 
         proxy_pass http://api/graphql;
     }
-
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/xn--72-9kcd8arods1i.xn--p1ai/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/xn--72-9kcd8arods1i.xn--p1ai/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
 }
 
 
