--- a/nginx.conf
+++ b/nginx.conf
@@ -1,29 +1,34 @@
-upstream api {
+upstream moi-vibor-api {
     zone local 64k;
-    server localhost:7000;
+    server localhost:7001;
     keepalive 20;
 }
 
 server {
-    server_name www.xn--72-9kcd8arods1i.xn--p1ai;
-    return 301 $scheme://xn--72-9kcd8arods1i.xn--p1ai$request_uri;
+    listen 80;
+    listen [::]:80;
+    server_name www.xn--72-9kcd8arods1i.xn--p1ai xn--72-9kcd8arods1i.xn--p1ai;
+    return 301 https://$server_name$request_uri;
 }
 
 server {
-    listen 80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
-    server_name xn--72-9kcd8arods1i.xn--p1ai;
+    server_name xn--72-9kcd8arods1i.xn--p1ai www.xn--72-9kcd8arods1i.xn--p1ai;
 
+    root /var/www/moi-vibor.rf/frontend/build;
     index index.html;
 
     location / {
         root /var/www/moi-vibor.rf/frontend/build;
 
         try_files $uri @prerender;
+#        try_files $uri /index.html;
     }
 
     location /oauth/ {
-        proxy_pass http://api/oauth/;
+        proxy_pass http://moi-vibor-api/oauth/;
     }
 
     location /assets {
@@ -72,7 +77,7 @@ server {
 
         if ($prerender = 1) {
             rewrite .* /$scheme://$host$request_uri? break;
-            proxy_pass http://api$request_uri;
+            proxy_pass http://moi-vibor-api$request_uri;
             #proxy_pass http://service.prerender.io;
         }
         if ($prerender = 0) {
@@ -86,22 +91,11 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
-        proxy_pass http://api/graphql;
+        proxy_pass http://moi-vibor-api/graphql;
     }
-}
 
-
-server {
-    if ($host = xn--72-9kcd8arods1i.xn--p1ai) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    listen 80;
-    listen [::]:80;
-
-    server_name xn--72-9kcd8arods1i.xn--p1ai;
-    return 404; # managed by Certbot
-
-
+    ssl_certificate /etc/letsencrypt/live/xn--72-9kcd8arods1i.xn--p1ai/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/xn--72-9kcd8arods1i.xn--p1ai/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
