--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,59 @@
-upstream moi-vibor-api {
+map $http_user_agent $prerender_ua {
+    default       0;
+    "~*Prerender" 0;
+
+    "~*googlebot"                               1;
+    "~*yahoo!\ slurp"                           1;
+    "~*bingbot"                                 1;
+    "~*yandex"                                  1;
+    "~*baiduspider"                             1;
+    "~*facebookexternalhit"                     1;
+    "~*twitterbot"                              1;
+    "~*rogerbot"                                1;
+    "~*linkedinbot"                             1;
+    "~*embedly"                                 1;
+    "~*quora\ link\ preview"                    1;
+    "~*showyoubot"                              1;
+    "~*outbrain"                                1;
+    "~*pinterest\/0\."                          1;
+    "~*developers.google.com\/\+\/web\/snippet" 1;
+    "~*slackbot"                                1;
+    "~*vkshare"                                 1;
+    "~*w3c_validator"                           1;
+    "~*redditbot"                               1;
+    "~*applebot"                                1;
+    "~*whatsapp"                                1;
+    "~*flipboard"                               1;
+    "~*tumblr"                                  1;
+    "~*bitlybot"                                1;
+    "~*skypeuripreview"                         1;
+    "~*nuzzel"                                  1;
+    "~*discordbot"                              1;
+    "~*google\ page\ speed"                     1;
+    "~*qwantify"                                1;
+    "~*pinterestbot"                            1;
+    "~*bitrix\ link\ preview"                   1;
+    "~*xing-contenttabreceiver"                 1;
+    "~*chrome-lighthouse"                       1;
+    "~*telegrambot"                             1;
+}
+
+map $args $prerender_args {
+    default $prerender_ua;
+    "~(^|&)_escaped_fragment_=" 1;
+}
+
+map $http_x_prerender $x_prerender {
+    default $prerender_args;
+    "1"     0;
+}
+
+map $uri $prerender {
+    default $x_prerender;
+    "~*\.(js|css|xml|less|png|jpg|jpeg|gif|pdf|doc|txt|ico|rss|zip|mp3|rar|exe|wmv|doc|avi|ppt|mpg|mpeg|tif|wav|mov|psd|ai|xls|mp4|m4a|swf|dat|dmg|iso|flv|m4v|torrent|ttf|woff|svg|eot)" 0;
+}
+
+upstream my-choice-api {
     zone local 64k;
     server localhost:7001;
     keepalive 20;
@@ -21,14 +76,15 @@ server {
     index index.html;
 
     location / {
-        root /var/www/moi-vibor.rf/frontend/build;
+        if ($prerender = 1) {
+            rewrite (.*) /prerenderio last;
+        }
 
-        try_files $uri @prerender;
-#        try_files $uri /index.html;
+        try_files $uri /index.html = 404;
     }
 
     location /oauth/ {
-        proxy_pass http://moi-vibor-api/oauth/;
+        proxy_pass http://my-choice-api/oauth/;
     }
 
     location /assets {
@@ -53,36 +109,16 @@ server {
         #try_files /home/user/my-choice/backend/dist/$uri $uri =404;
     }
 
-    location @prerender {
-        #proxy_set_header X-Prerender-Token YOUR_TOKEN;
-        root /home/user/my-choice/frontend/build;
-
-        set $prerender 0;
-
-        if ($http_user_agent ~* "googlebot|bingbot|yandex|baiduspider|twitterbot|facebookexternalhit|rogerbot|linkedinbot|embedly|quora link preview|showyoubot|outbrain|pinterest\/0\.|pinterestbot|slackbot|vkShare|W3C_Validator|whatsapp") {
-            set $prerender 1;
-        }
-        if ($args ~ "_escaped_fragment_") {
-            set $prerender 1;
-        }
-        if ($http_user_agent ~ "Prerender") {
-            set $prerender 0;
-        }
-        if ($uri ~* "\.(js|css|xml|less|png|jpg|jpeg|gif|pdf|doc|txt|ico|rss|zip|mp3|rar|exe|wmv|doc|avi|ppt|mpg|mpeg|tif|wav|mov|psd|ai|xls|mp4|m4a|swf|dat|dmg|iso|flv|m4v|torrent|ttf|woff|svg|eot)") {
-            set $prerender 0;
+    location /prerenderio {
+        if ($prerender = 0) {
+            return 404;
         }
 
         #resolve using Google's DNS server to force DNS resolution and prevent caching of IPs
-        resolver 8.8.8.8;
+        resolver 8.8.8.8 8.8.4.4;
 
-        if ($prerender = 1) {
-            rewrite .* /$scheme://$host$request_uri? break;
-            proxy_pass http://moi-vibor-api$request_uri;
-            #proxy_pass http://service.prerender.io;
-        }
-        if ($prerender = 0) {
-            rewrite .* /index.html break;
-        }
+        proxy_pass http://my-choice-api$request_uri;
+        rewrite .* /$scheme://$host$request_uri? break;
     }
 
     location /graphql {
@@ -91,7 +127,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
-        proxy_pass http://moi-vibor-api/graphql;
+        proxy_pass http://my-choice-api/graphql;
     }
 
     ssl_certificate /etc/letsencrypt/live/xn--72-9kcd8arods1i.xn--p1ai/fullchain.pem; # managed by Certbot
