add logs to nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -71,7 +71,8 @@ server {
     listen [::]:443 ssl http2;
 
     server_name xn--72-9kcd8arods1i.xn--p1ai www.xn--72-9kcd8arods1i.xn--p1ai;
-
+    access_log /var/log/nginx/moi-vibor-access.log;
+    error_log /var/log/nginx/moi-vibor-error.log;
     root /var/www/moi-vibor.rf/frontend/build;
     index index.html;
 
